[metadata]
name = aapy
url = https://github.com/dls-controls/aapy
description = Python client for the EPICS Archiver Appliance
license = Apache License 2.0
author = Will Rogers
author_email = will.rogers@diamond.ac.uk
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9



[options]
packages = find:
include_package_data = False
install_requires =
    numpy
    protobuf
    pytz
    requests
    tzlocal

[options.packages.find]
# Don't include our tests directory in the distribution
exclude = tests

[mypy]
# Ignore missing stubs for modules we use
ignore_missing_imports = True

[isort]
profile=black
float_to_top=true
skip=setup.py,conf.py,build

[flake8]
# Make flake8 respect black's line length (default 88),
max-line-length = 88
extend-ignore =
    E203,  # See https://github.com/PyCQA/pycodestyle/issues/373
    F811, # support typing.overload decorator
    F722, # allow Annotated[typ, some_func("some string")]

[tool:pytest]
# Run pytest with all our checkers, and don't spam us with massive tracebacks on error
addopts =
    --tb=native -vv --flake8 --black --mypy --doctest-modules --doctest-glob="*.rst"
     --cov=aa --cov-report term --cov-report xml:cov.xml


[coverage:run]
# This is covered in the versiongit test suite so exclude it here
omit = */_version_git.py

