[metadata]
name = aapy
version = file: aa/VERSION
description = Python client for the EPICS Archiver Appliance
license = Apache License 2.0
author = Will Rogers
author_email = will.rogers@diamond.ac.uk

[options]
packages = aa
include_package_data = False
install_requires =
    numpy
    protobuf
    pytz
    requests
    tzlocal

[options.package_data]
aa = VERSION

